--- a/model.ipynb
+++ b/model.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0e862520",
+   "id": "1f01a91f",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "52f2c17b",
+   "id": "358dcca5",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d6555bc3",
+   "id": "638160df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7626d009",
+   "id": "d7f7ce3a",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "047465db",
+   "id": "539748c6",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c6db737d",
+   "id": "03444793",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bd92838e",
+   "id": "be48ec72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "69aa58e2",
+   "id": "43c56868",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bcbf3a89",
+   "id": "053f28b3",
    "metadata": {},
    "outputs": [
     {
@@ -223,8 +223,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "f789ae14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes=[\"airplane\", \"automobile\", \"bird\", \"cat\", \"deer\", \"dog\", \"frog\", \"horse\",\"ship\",\"truck\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8d6a0f09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train_scaled=x_train/255\n",
+    "x_test_scaled=x_test/255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f0afb0f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train_categorical=keras.utils.to_categorical(\n",
+    "    y_train, num_classes=10, dtype=\"float32\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8828f160",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 1., 0., 0., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train_categorical[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d080a13a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test_categorical=keras.utils.to_categorical(\n",
+    "    y_test, num_classes=10, dtype=\"float32\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "94b37f0c",
+   "id": "05a9c35f",
    "metadata": {},
    "outputs": [],
    "source": []
