--- a/model.ipynb
+++ b/model.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1f01a91f",
+   "id": "7967cc6a",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "358dcca5",
+   "id": "d7b89426",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "638160df",
+   "id": "8add3c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d7f7ce3a",
+   "id": "82d72a39",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "539748c6",
+   "id": "490c9925",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "03444793",
+   "id": "ac7a5b81",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "be48ec72",
+   "id": "e25c2009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "43c56868",
+   "id": "9c9a96c0",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "053f28b3",
+   "id": "00f78199",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f789ae14",
+   "id": "450f3637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8d6a0f09",
+   "id": "2eef1e09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f0afb0f3",
+   "id": "1d330a83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8828f160",
+   "id": "1166dd96",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d080a13a",
+   "id": "4053ad40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,12 +288,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b741d3a",
+   "metadata": {},
+   "source": [
+    "==========BUILDING MODEL============="
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "05a9c35f",
+   "execution_count": 29,
+   "id": "849f50fb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model=keras.Sequential([\n",
+    "    keras.layers.Flatten(input_shape=(32,32,3)),\n",
+    "    keras.layers.Dense(3000, activation=\"relu\"),\n",
+    "    keras.layers.Dense(2000, activation=\"relu\"),\n",
+    "    keras.layers.Dense(10, activation=\"sigmoid\")]\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "459b1f08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=\"adam\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f745159e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(x_train_scaled, y_train_categorical, epochs=25)"
+   ]
   }
  ],
  "metadata": {
