--- a/model.ipynb
+++ b/model.ipynb
@@ -49,16 +49,7 @@
    "execution_count": 4,
    "id": "d7b89426",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-      "170498071/170498071 [==============================] - 84s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df=tf.keras.datasets.cifar10.load_data()"
    ]
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "82d72a39",
    "metadata": {},
    "outputs": [
@@ -116,7 +107,7 @@
        "       [148, 124, 103]], dtype=uint8)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "490c9925",
    "metadata": {},
    "outputs": [
@@ -137,7 +128,7 @@
        "(50000, 32, 32, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "ac7a5b81",
    "metadata": {},
    "outputs": [
@@ -158,7 +149,7 @@
        "6"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "e25c2009",
    "metadata": {},
    "outputs": [],
@@ -181,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "9c9a96c0",
    "metadata": {},
    "outputs": [
@@ -202,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "00f78199",
    "metadata": {},
    "outputs": [
@@ -223,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "450f3637",
    "metadata": {},
    "outputs": [],
@@ -233,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "2eef1e09",
    "metadata": {},
    "outputs": [],
@@ -244,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "1d330a83",
    "metadata": {},
    "outputs": [],
@@ -256,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "1166dd96",
    "metadata": {},
    "outputs": [
@@ -266,7 +257,7 @@
        "array([0., 0., 0., 0., 0., 0., 1., 0., 0., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "4053ad40",
    "metadata": {},
    "outputs": [],
@@ -297,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "849f50fb",
    "metadata": {},
    "outputs": [],
@@ -313,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "459b1f08",
    "metadata": {},
    "outputs": [],
@@ -326,9 +317,48 @@
    "execution_count": null,
    "id": "f745159e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/25\n",
+      "1563/1563 [==============================] - 442s 279ms/step - loss: 1.8897 - accuracy: 0.3280\n",
+      "Epoch 2/25\n",
+      "1563/1563 [==============================] - 394s 252ms/step - loss: 1.6828 - accuracy: 0.3952\n",
+      "Epoch 3/25\n",
+      "1563/1563 [==============================] - 443s 283ms/step - loss: 1.6203 - accuracy: 0.4165\n",
+      "Epoch 4/25\n",
+      "1563/1563 [==============================] - 419s 268ms/step - loss: 1.5724 - accuracy: 0.4367\n",
+      "Epoch 5/25\n",
+      "1563/1563 [==============================] - 411s 263ms/step - loss: 1.5400 - accuracy: 0.4458\n",
+      "Epoch 6/25\n",
+      "1563/1563 [==============================] - 372s 238ms/step - loss: 1.5114 - accuracy: 0.4551\n",
+      "Epoch 7/25\n",
+      "1563/1563 [==============================] - 366s 234ms/step - loss: 1.4894 - accuracy: 0.4664\n",
+      "Epoch 8/25\n",
+      "1563/1563 [==============================] - 390s 250ms/step - loss: 1.4691 - accuracy: 0.4706\n",
+      "Epoch 9/25\n",
+      "1563/1563 [==============================] - 392s 251ms/step - loss: 1.4516 - accuracy: 0.4789\n",
+      "Epoch 10/25\n",
+      "1563/1563 [==============================] - 8262s 5s/step - loss: 1.4376 - accuracy: 0.4842\n",
+      "Epoch 11/25\n",
+      " 313/1563 [=====>........................] - ETA: 6:03 - loss: 1.4146 - accuracy: 0.4848"
+     ]
+    }
+   ],
    "source": [
     "model.fit(x_train_scaled, y_train_categorical, epochs=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1794336f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred=model.predict(x_test_scaled)"
    ]
   }
  ],
