--- a/model.ipynb
+++ b/model.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f745159e",
    "metadata": {},
    "outputs": [
@@ -323,22 +323,56 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "1563/1563 [==============================] - 486s 308ms/step - loss: 1.8756 - accuracy: 0.3297\n",
+      "1563/1563 [==============================] - 385s 244ms/step - loss: 1.8885 - accuracy: 0.3297\n",
       "Epoch 2/20\n",
-      "1563/1563 [==============================] - 419s 268ms/step - loss: 1.6477 - accuracy: 0.4087\n",
+      "1563/1563 [==============================] - 372s 238ms/step - loss: 1.6661 - accuracy: 0.3998\n",
       "Epoch 3/20\n",
-      "1563/1563 [==============================] - 441s 282ms/step - loss: 1.5697 - accuracy: 0.4373\n",
+      "1563/1563 [==============================] - 374s 239ms/step - loss: 1.5828 - accuracy: 0.4322\n",
       "Epoch 4/20\n",
-      "1563/1563 [==============================] - 325s 208ms/step - loss: 1.5157 - accuracy: 0.4588\n",
+      "1563/1563 [==============================] - 373s 239ms/step - loss: 1.5311 - accuracy: 0.4516\n",
       "Epoch 5/20\n",
-      "1563/1563 [==============================] - 330s 211ms/step - loss: 1.4794 - accuracy: 0.4710\n",
+      "1563/1563 [==============================] - 395s 252ms/step - loss: 1.4949 - accuracy: 0.4643\n",
       "Epoch 6/20\n",
-      "1563/1563 [==============================] - 446s 285ms/step - loss: 1.4473 - accuracy: 0.4839\n",
+      "1563/1563 [==============================] - 376s 241ms/step - loss: 1.4657 - accuracy: 0.4734\n",
       "Epoch 7/20\n",
-      "1563/1563 [==============================] - 340s 218ms/step - loss: 1.4205 - accuracy: 0.4905\n",
+      "1563/1563 [==============================] - 343s 220ms/step - loss: 1.4386 - accuracy: 0.4853\n",
       "Epoch 8/20\n",
-      " 354/1563 [=====>........................] - ETA: 5:15 - loss: 1.3937 - accuracy: 0.5078"
+      "1563/1563 [==============================] - 408s 261ms/step - loss: 1.4147 - accuracy: 0.4901\n",
+      "Epoch 9/20\n",
+      "1563/1563 [==============================] - 346s 221ms/step - loss: 1.3890 - accuracy: 0.4999\n",
+      "Epoch 10/20\n",
+      "1563/1563 [==============================] - 319s 204ms/step - loss: 1.3720 - accuracy: 0.5073\n",
+      "Epoch 11/20\n",
+      "1563/1563 [==============================] - 338s 216ms/step - loss: 1.3496 - accuracy: 0.5142\n",
+      "Epoch 12/20\n",
+      "1563/1563 [==============================] - 339s 217ms/step - loss: 1.3333 - accuracy: 0.5235\n",
+      "Epoch 13/20\n",
+      "1563/1563 [==============================] - 327s 209ms/step - loss: 1.3170 - accuracy: 0.5282\n",
+      "Epoch 14/20\n",
+      "1563/1563 [==============================] - 325s 208ms/step - loss: 1.2985 - accuracy: 0.5333\n",
+      "Epoch 15/20\n",
+      "1563/1563 [==============================] - 324s 207ms/step - loss: 1.2833 - accuracy: 0.5398\n",
+      "Epoch 16/20\n",
+      "1563/1563 [==============================] - 318s 204ms/step - loss: 1.2695 - accuracy: 0.5436\n",
+      "Epoch 17/20\n",
+      "1563/1563 [==============================] - 410s 262ms/step - loss: 1.2588 - accuracy: 0.5498\n",
+      "Epoch 18/20\n",
+      "1563/1563 [==============================] - 358s 229ms/step - loss: 1.2443 - accuracy: 0.5535\n",
+      "Epoch 19/20\n",
+      "1563/1563 [==============================] - 378s 242ms/step - loss: 1.2355 - accuracy: 0.5560\n",
+      "Epoch 20/20\n",
+      "1563/1563 [==============================] - 322s 206ms/step - loss: 1.2189 - accuracy: 0.5615\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x2513e1f04c0>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -347,13 +381,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1794336f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 8s 23ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred=model.predict(x_test_scaled)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "673a3b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Classification metrics can't handle a mix of multiclass and continuous-multioutput targets",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [22]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m confusion_matrix, accuracy_score\n\u001b[1;32m----> 2\u001b[0m cm\u001b[38;5;241m=\u001b[39m\u001b[43mconfusion_matrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m cm\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:307\u001b[0m, in \u001b[0;36mconfusion_matrix\u001b[1;34m(y_true, y_pred, labels, sample_weight, normalize)\u001b[0m\n\u001b[0;32m    222\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconfusion_matrix\u001b[39m(\n\u001b[0;32m    223\u001b[0m     y_true, y_pred, \u001b[38;5;241m*\u001b[39m, labels\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, sample_weight\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, normalize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    224\u001b[0m ):\n\u001b[0;32m    225\u001b[0m     \u001b[38;5;124;03m\"\"\"Compute confusion matrix to evaluate the accuracy of a classification.\u001b[39;00m\n\u001b[0;32m    226\u001b[0m \n\u001b[0;32m    227\u001b[0m \u001b[38;5;124;03m    By definition a confusion matrix :math:`C` is such that :math:`C_{i, j}`\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    305\u001b[0m \u001b[38;5;124;03m    (0, 2, 1, 1)\u001b[39;00m\n\u001b[0;32m    306\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 307\u001b[0m     y_type, y_true, y_pred \u001b[38;5;241m=\u001b[39m \u001b[43m_check_targets\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_true\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    308\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m y_type \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinary\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulticlass\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m    309\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m is not supported\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m y_type)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:93\u001b[0m, in \u001b[0;36m_check_targets\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m     90\u001b[0m     y_type \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulticlass\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(y_type) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m---> 93\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m     94\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClassification metrics can\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt handle a mix of \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m and \u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m targets\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m     95\u001b[0m             type_true, type_pred\n\u001b[0;32m     96\u001b[0m         )\n\u001b[0;32m     97\u001b[0m     )\n\u001b[0;32m     99\u001b[0m \u001b[38;5;66;03m# We can't have more than one value on y_type => The set is no more needed\u001b[39;00m\n\u001b[0;32m    100\u001b[0m y_type \u001b[38;5;241m=\u001b[39m y_type\u001b[38;5;241m.\u001b[39mpop()\n",
+      "\u001b[1;31mValueError\u001b[0m: Classification metrics can't handle a mix of multiclass and continuous-multioutput targets"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "cm=confusion_matrix(y_test, y_pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2c90e19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
