--- a/model.ipynb
+++ b/model.ipynb
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "bd812e87",
+   "id": "9c793822",
    "metadata": {},
    "outputs": [
     {
@@ -432,50 +432,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "13eda4bf",
+   "execution_count": 30,
+   "id": "eecf6280",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cat'"
+       "'ship'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classes[y_test[0][0]]"
+    "classes[y_test[1][0]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "8bc23341",
+   "execution_count": 31,
+   "id": "d07b73dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cat'"
+       "'ship'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classes[np.argmax(y_pred[0])]"
+    "classes[np.argmax(y_pred[1])]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d13c3a04",
+   "id": "7d65d1af",
    "metadata": {},
    "outputs": [],
    "source": []
